Fix spacing on header when user is logged

--- a/themes/concordamos/assets/scss/4-layout/_l-header.scss
+++ b/themes/concordamos/assets/scss/4-layout/_l-header.scss
@@ -32,7 +32,7 @@ header{
             }
         }
         
-        .logged-in & {
+        .logged-in.admin-bar & {
             top: 32px;
 
             &.scrolled {
